# TinyRenderer

./: .gitignore  CMakeLists.txt  Clean.ps1  Clean.sh  README.md  framebuffer.tga  main.cpp
inc/: Logger.h
lesson_1/: first_attempt.tga
src/: TinyRenderer.cpp
src/Renderer/: TinyRenderer.cpp
src/TGAImage/: CMakeLists.txt
